--- a/src/components/styles/styles.css
+++ b/src/components/styles/styles.css
@@ -1,7 +1,24 @@
+@import url('https://fonts.googleapis.com/css?family=Asap+Condensed:600i,700');
+body{
+    background-image: url(../img/20585.jpg);
+    background-size: cover;
+    font-family: 'Asap Condensed', sans-serif;
+}
 .login-form{
     width: 100%;
     max-width: 330px;
     padding: 15px;
     margin: auto;
     height: 100%;
+    margin-top: 10%;
+    background: rgba(255,255,255,1);
+    background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(246,246,246,1)), color-stop(100%, rgba(237,237,237,1)));
+    background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+    background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+    background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+    background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0 );
+    border-radius: 2px;
+    box-shadow: 0 6px 12px -3px rgba(0,0,0,.3);
 }
